fix: сделать history = new LinkedList<>();